# pay-n-ticketing

./: Cargo.toml  README.md
.github/workflows/: build-rs.yaml
migrations/: init.sql
src/: lib.rs  mailer.rs  main.rs  services.rs  structs.rs
