[package]
name = "pay-n-ticketing-ee"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
libsql-client = "0.31.0"
shuttle-turso = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
base64 = "0.21.5"
chrono = "0.4.31"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
axum-extra = { version = "0.9.0" }
http = "1.0.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]